<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">login</string>
    <string name="userName">User name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="save">save</string>
    <string name="add">Add</string>
    <string name="required_field">Field Required!</string>
    <string name="success">Success!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_progress">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cep">Cep</string>
    <string name="find">Find</string>
    <string name="loading">Loading...</string>
</resources>